refactor: padroniza services, controllers e implementa hateoas em todas as entidades